# systems_integration_projects

http_server/: Makefile  README.md  http_server
http_server/src/: main.c  server.c  server.h
pwatcurl/: Makefile  README.md
pwatcurl/src/: main.c  request.c  request.h
pwatdb_conn/: .env  Gemfile  app.rb  auth_db.rb
pwatdb_server/: docker-compose.yml
pwatdb_server/pwatdb/: .env  README.md  app.py  auth.sh  db.py  pyproject.toml
pwatgres/: Gemfile  README.md  pg_user.rb
