[project]
name = "pwatdb"
version = "0.1.0"
description = ""
authors = [
    {name = "Rin",email = "y.delahaije@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
